cluster/home/littlelink/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: little-link
  namespace: little-link
  labels:
    app: little-link
spec:
  replicas: 1
  selector:
    matchLabels:
      app: little-link
  template:
    metadata:
      labels:
        app: little-link
    spec:
      containers:
      - image: ghcr.io/techno-tim/littlelink-server@sha256:66371a0867062ec598e1bbf8aa575b5a9be40b6f426773acd2b7b0834d303d5b
        name: little-link
        imagePullPolicy: Always
