cluster/home/littlelink/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: little-link-web-svc
  namespace: little-link
spec:
  selector:
    app: little-link
  ports:
    - name: http
      targetPort: 3000
      port: 80
